--- a/docs/docs/lib/js.mdx
+++ b/docs/docs/lib/js.mdx
@@ -42,11 +42,11 @@ const growthbook = new GrowthBook({
 });
 
 // Load feature definitions (from API, database, etc.)
-fetch("https://cdn.growthbook.io/api/features/<your api key>")
+fetch("https://cdn.growthbook.io/api/features/MY_API_KEY")
   .then((res) => res.json())
-  .then((parsed) => {
-    growthbook.setFeatures(parsed.features);
-  });
+  .then((json) => growthbook.setFeatures(json.features))
+  .catch((e) => console.error("Failed to fetch features", e));
+
 
 // Simple boolean (on/off) feature flag
 if (growthbook.isOn("my-feature")) {
@@ -196,38 +196,34 @@ If you enable encryption for an SDK Endpoint, instead of returning features as h
 
 With encryption enabled, the response from the SDK Endpoint will be in the format:
 
-```js
+```json
   {
-    status: 200,
-    encryptedFeatures: "abcdef123456GHIJKL0987654321..."
+    "status": 200,
+    "encryptedFeatures": "abcdef123456GHIJKL0987654321..."
   }
 ```
 
-The features are encrypted using the AES-CBC algorithm. You can find your encryption key on the **Features -> Environments** page in GrowthBook.
-
-Here's an example of decrypting features using the SubtleCrypto api, which is built into all modern browsers:
+The GrowthBook class has a `setEncryptedFeatures` helper method. You will need to pass in your encryption key, which you can find on the **Features -> Environments** page in GrowthBook.
 
 ```ts
-// Helper function to decrypt using SubtleCrypto
-async function decrypt(encryptedText) {
-  const GB_ENCRYPTION_KEY = "MY_ENCRYPTION_KEY"; // <-- Set your encryption key here
-  const base64ToBuf = (b) => Uint8Array.from(atob(b), (c) => c.charCodeAt(0));
-  const key = await window.crypto.subtle.importKey(
-    "raw", base64ToBuf(GB_ENCRYPTION_KEY),
-    { name: "AES-CBC", length: 128 }, true, ["encrypt", "decrypt"]
-  );
-  const [iv, cipherText] = encryptedText.split(".");
-  const plainTextBuffer = await window.crypto.subtle
-    .decrypt({name: "AES-CBC", iv: base64ToBuf(iv)}, key, base64ToBuf(cipherText));
-  return new TextDecoder().decode(plainTextBuffer);
-}
-
 // Load features from the encrypted SDK Endpoint and decrypt them
 fetch("https://cdn.growthbook.io/api/features/<your api key>")
   .then((res) => res.json())
-  .then((json) => decrypt(json.encryptedFeatures))
-  .then((featuresStr) => growthbook.setFeatures(JSON.parse(featuresStr)))
+  .then((json) => growthbook.setEncryptedFeatures(json.encryptedFeatures, "MY_ENCRYPTION_KEY"))
   .catch((e) => console.log("Failed to set GrowthBook feature definitions", e));
+```
+
+**Note**: This method is not completely private. Users could find your encryption key if they inspect your minified javascript files.
+
+### Node.js
+
+If you're using this SDK in a Node.js environment using Node 18 or lower, you will need to pass in a SubtleCrpyto implementation as the 3rd argument when calling `setEncryptedFeatures`.
+
+```ts
+// Node 15+
+const crypto = require('node:crypto').webcrypto;
+
+growthbook.setEncryptedFeatures(encryptedString, encryptionKey, crypto.subtle);
 ```
 
 ## Inline Experiments
