--- a/docs/docs/lib/react.mdx
+++ b/docs/docs/lib/react.mdx
@@ -45,11 +45,10 @@ const growthbook = new GrowthBook({
 export default function App() {
   useEffect(() => {
     // Load feature definitions from GrowthBook API
-    fetch("https://cdn.growthbook.io/api/features/<your api key>")
+    fetch("https://cdn.growthbook.io/api/features/MY_API_KEY")
       .then((res) => res.json())
-      .then((parsed) => {
-        growthbook.setFeatures(parsed.features);
-      });
+      .then((json) => growthbook.setFeatures(json.features))
+      .catch((e) => console.error("Failed to fetch features", e));
 
     // Set user attributes for targeting (from cookie, auth system, etc.)
     growthbook.setAttributes({
@@ -79,7 +78,7 @@ export default function OtherComponent() {
   // Boolean on/off flags
   const newLogin = useFeature("new-login-form").on;
 
-  // Multivariate or string/JSON values
+  // Multivariate or string/JSON values with a fallback
   const buttonColor = useFeature("login-button-color").value || "blue";
 
   if (newLogin) {
@@ -244,39 +243,22 @@ If you enable encryption for an SDK Endpoint, instead of returning features as h
 
 With encryption enabled, the response from the SDK Endpoint will be in the format:
 
-```js
+```json
   {
-    status: 200,
-    encryptedFeatures: "abcdef123456GHIJKL0987654321..."
+    "status": 200,
+    "encryptedFeatures": "abcdef123456GHIJKL0987654321..."
   }
 ```
 
-The features are encrypted using the AES-CBC algorithm. You can find your encryption key on the **Features -> Environments** page in GrowthBook.
+The GrowthBook class has a `setEncryptedFeatures` helper method. You will need to pass in your encryption key, which you can find on the **Features -> Environments** page in GrowthBook.
 
-Here's an example of decrypting features using the SubtleCrypto api, which is built into all modern browsers:
-
-```jsx
-// Helper function to decrypt using SubtleCrypto
-async function decrypt(encryptedText) {
-  const GB_ENCRYPTION_KEY = "MY_ENCRYPTION_KEY"; // <-- Set your encryption key here
-  const base64ToBuf = (b) => Uint8Array.from(atob(b), (c) => c.charCodeAt(0));
-  const key = await window.crypto.subtle.importKey(
-    "raw", base64ToBuf(GB_ENCRYPTION_KEY),
-    { name: "AES-CBC", length: 128 }, true, ["encrypt", "decrypt"]
-  );
-  const [iv, cipherText] = encryptedText.split(".");
-  const plainTextBuffer = await window.crypto.subtle
-    .decrypt({name: "AES-CBC", iv: base64ToBuf(iv)}, key, base64ToBuf(cipherText));
-  return new TextDecoder().decode(plainTextBuffer);
-}
-
+```ts
 function MyApp() {
   useEffect(() => {
     // Load features from the encrypted SDK Endpoint and decrypt them
     fetch("https://cdn.growthbook.io/api/features/<your api key>")
       .then((res) => res.json())
-      .then((json) => decrypt(json.encryptedFeatures))
-      .then((featuresStr) => growthbook.setFeatures(JSON.parse(featuresStr)))
+      .then((json) => growthbook.setEncryptedFeatures(json.encryptedFeatures, "MY_ENCRYPTION_KEY"))
       .catch((e) => console.log("Failed to set GrowthBook feature definitions", e));
   }, []);
   // ...
@@ -284,6 +266,10 @@ function MyApp() {
 ```
 
 **Note**: This method is not completely private. Users could find your encryption key if they inspect your minified javascript files.
+
+### React Native
+
+If you're using React Native, you may need to polyfill the `window.crypto.subtle` API and the `TextEncoder/TextDecoder` classes.
 
 ## Inline Experiments
 
