--- a/docs/docs/app/features.mdx
+++ b/docs/docs/app/features.mdx
@@ -87,21 +87,21 @@ Each attribute has 3 parts:
   - Enum - When there are only a small list of pre-defined values it could take
 - Whether or not it's an **identifier**. Identifiers are attributes which uniquely identify something - typically either a person, account, company, or device.
 
-### Enable Date/Time Based Feature Rules
+### Schedule Feature Flags
 
-If you would like to build feature rules around date and time, you need to do two things.
+If you would like to enable/disable feature flags by date and time, you need to do two things.
 
 1). Enable the date-time attribute toggle in the Growthbook App under **Settings** > **Attributes**.
 
 ![Date/Time toggle UI](/images/date-time-toggle.png)
 
-2). If you're using an SDK other than the JS or React SDKs, you will need to pass in a `current_datetime` attribute when setting attributes. This date needs to be a string in the simplified extended ISO format (ISO 8601).
+2). If you're using an SDK other than the JS or React SDKs, you will need to pass in a `current_datetime` attribute when setting attributes. This date to be in Unix epoch time.
 
 ```ts
 growthbook.setAttributes({
   id: user.id,
   email: user.email,
-  current_datetime: new Date().toISOString(),
+  current_datetime: new Date().valueOf(),
 });
 ```
 
@@ -109,7 +109,7 @@ Now, you can create feature rules based on date and time.
 
 ![Date/Time conditions UI](/images/date-time-condition.png)
 
-**Note**: The timezone will be set automatically by your browser.
+**Note**: The timezone displayed in the app is automatically set by your browser. The rules are evaluated independently of timezones. Meaning, if you want a feature flag enabled on 01/01/2023 at 11:59PM EST and someone in PST views your site at 11:30 PM PST, the feature will be enabled, since 11:30PM PST is after 11:59AM EST.
 
 ## Override Rules
 
