Fixing a typo in the docs.

--- a/docs/docs/app/features.mdx
+++ b/docs/docs/app/features.mdx
@@ -109,7 +109,7 @@ Now, you can create feature rules based on date and time.
 
 ![Date/Time conditions UI](/images/date-time-condition.png)
 
-**Note**: The timezone displayed in the app is automatically set by your browser. The rules are evaluated independently of timezones. Meaning, if you want a feature flag enabled on 01/01/2023 at 11:59PM EST and someone in PST views your site at 11:30 PM PST, the feature will be enabled, since 11:30PM PST is after 11:59AM EST.
+**Note**: The timezone displayed in the app is automatically set by your browser. The rules are evaluated independently of timezones. Meaning, if you want a feature flag enabled on 01/01/2023 at 11:59PM EST and someone in PST views your site at 11:30 PM PST, the feature will be enabled, since 11:30PM PST is after 11:59PM EST.
 
 ## Override Rules
 
