Text changes and updated image link

--- a/docs/docs/guide/mixpanel.mdx
+++ b/docs/docs/guide/mixpanel.mdx
@@ -57,13 +57,13 @@ Mixpanel. You can find this in the the project settings overview from mixpanel
 
 ## 3. Experiment Tracking Information
 
-After you successfully connect to mixpanel from GrowthBook you'll be asked to enter the experiment event information.
-The values you add here can be any you choose, although if you have already implemented experiment event tracking, you
-should use the values you chose there. We suggest you use `$experiment started`, `Experiment name` and `Variation name` as
-in the example below.
+After you successfully connect to mixpanel from GrowthBook you'll be asked to enter the experiment event information. 
+These values need to match the names you choose when sending the experiment exposure information to Mixpanel (see 
+step 4), but can be any values you choose. We suggest you use `$experiment started`, `Experiment name` and 
+`Variant name` as in the example below.
 
 <img
-  src="/images/guides/mixpanel-6-add-exp-event-names.png"
+  src="/images/guides/mixpanel-6-add-exp-event-names2.png"
   alt="Experiment event naming for GrowthBook"
   style={{ width: 500, margin: "0 auto" }}
 />
