--- a/docs/docs/guide/mixpanel.mdx
+++ b/docs/docs/guide/mixpanel.mdx
@@ -37,8 +37,15 @@ it's best to leave this page up while you do the next step to add that connectio
 
 ## 2. Connect GrowthBook to Mixpanel
 
-From the data source section of the GrowthBook Platform, you can add a data source, and then choose Mixpanel from the
-drop down.
+From the Analysis -> Data source section of the GrowthBook Platform, you can add a data source, and then choose Mixpanel avaliable options.
+
+<img
+  src="/images/new-data-sources-modal.png"
+  alt="GrowthBook add Mixpanel data source form"
+  style={{ width: 500, margin: "0 auto" }}
+/>
+
+With that selected, you'll be asked to enter your Mixpanel connection information:
 
 <img
   src="/images/guides/mixpanel-1-add-data-source.png"
