--- a/docs/docs/guide/mixpanel.mdx
+++ b/docs/docs/guide/mixpanel.mdx
@@ -37,7 +37,8 @@ it's best to leave this page up while you do the next step to add that connectio
 
 ## 2. Connect GrowthBook to Mixpanel
 
-From the Analysis -> Data source section of the GrowthBook Platform, you can add a data source, and then choose Mixpanel avaliable options.
+From the Analysis -> Data source section of the GrowthBook Platform, you can add a data source, and then choose 
+Mixpanel from the avaliable options.
 
 <img
   src="/images/new-data-sources-modal.png"
@@ -45,7 +46,7 @@ From the Analysis -> Data source section of the GrowthBook Platform, you can add
   style={{ width: 500, margin: "0 auto" }}
 />
 
-With that selected, you'll be asked to enter your Mixpanel connection information:
+Then you'll be asked to enter your Mixpanel connection information:
 
 <img
   src="/images/guides/mixpanel-1-add-data-source.png"
