--- a/docs/docs/lib/build-your-own.mdx
+++ b/docs/docs/lib/build-your-own.mdx
@@ -7,7 +7,7 @@ slug: build-your-own
 
 # Build Your Own SDK
 
-**Latest spec version: 0.2.2 [View Changelog](#changelog)**
+**Latest spec version: 0.2.3 [View Changelog](#changelog)**
 
 This guide is meant for library authors looking to build a GrowthBook SDK in a currently unsupported language.
 
@@ -825,3 +825,5 @@ Open a [GitHub issue](https://github.com/growthbook/growthbook/issues) with a li
   - Add test case for when an experiment's hashAttribute is `null`
 - **v0.2.2** 2022-09-08
   - Add test case for when an experiment's hashAttribute is an integer
+- **v0.2.3** 2022-12-06
+  - Add test case for when an experiment's coverage is set to 0
