add link to Ruby on Rails example

--- a/docs/docs/lib/ruby.mdx
+++ b/docs/docs/lib/ruby.mdx
@@ -5,6 +5,8 @@ sidebar_label: Ruby
 slug: ruby
 ---
 
+import ExternalLink from '@site/src/components/ExternalLink'
+
 # Ruby
 
 View the full source code at [https://github.com/growthbook/growthbook-ruby](https://github.com/growthbook/growthbook-ruby).
@@ -148,3 +150,7 @@ gb.run(Growthbook::InlineExperiment.new(
   namespace: ["pricing-page", 0, 0.25]
 ))
 ```
+
+## Code Examples
+
+- [Ruby on Rails example <ExternalLink />](https://github.com/growthbook/examples/tree/main/acme_donuts_rails)
