--- a/docs/docs/lib/csharp.mdx
+++ b/docs/docs/lib/csharp.mdx
@@ -2,7 +2,7 @@
 title: C# SDK
 description: GrowthBook SDK for C#
 sidebar_label: C#
-slug: C#
+slug: csharp
 ---
 
 # C#
@@ -30,10 +30,10 @@ Down below you'll find two basic examples on how the package works.
     ```csharp
 
     var staticFeatures = new Dictionary<string, Feature>
-        {
-            {"firstFeature", new Feature{ DefaultValue = true}},
-            {"secondFeature", new Feature{ DefaultValue = false}}
-        };
+    {
+        {"firstFeature", new Feature{ DefaultValue = true}},
+        {"secondFeature", new Feature{ DefaultValue = false}}
+    };
     ```
 
 2. Create a context and add the features
