--- a/docs/docs/lib/index.mdx
+++ b/docs/docs/lib/index.mdx
@@ -8,6 +8,7 @@ sidebar_label: SDKs
 
 We offer official SDKs in a few popular languages:
 
+- [C#](/lib/csharp)
 - [Javascript/Typescript](/lib/js)
 - [React](/lib/react)
 - [PHP](/lib/php)
