Created C# docs page (#762)
* Created csharp page
Co-authored-by: Alexandru Mitu

--- a/docs/docs/lib/index.mdx
+++ b/docs/docs/lib/index.mdx
@@ -15,6 +15,7 @@ We offer official SDKs in a few popular languages:
 - [Python](/lib/python)
 - [Go](/lib/go)
 - [Java](/lib/java)
+- [C#](/lib/csharp)
 - [Kotlin (Android)](/lib/kotlin)
 - [Swift](https://github.com/growthbook/growthbook-swift)
 - [Flutter](/lib/flutter)
