React 18: ReactDOM.render makes page behave as if it is React 17
npx create-react-app my-app generates index.js like:

```
const root = ReactDOM.createRoot(document.getElementById('root'));
root.render(...)
```

The documentation reflects this now, and the user-created app will behave properly for React 18.

Refactored the tests so they no longer emit warnings - CI tests were a bit bloated by 15 lines each time ReactDOM.render was called. I figured adding some testing libraries to dev dependencies would be worth it to step away from the React 17 style throughout the codebase.

> Warning: ReactDOM.render is no longer supported in React 18. Use createRoot instead. Until you switch to the new API, your app will behave as if it's running React 17. Learn more: https://reactjs.org/link/switch-to-createroot

--- a/docs/docs/guide/create-react-app-and-growthbook.mdx
+++ b/docs/docs/guide/create-react-app-and-growthbook.mdx
@@ -96,12 +96,15 @@ Make sure to swap out the `FEATURES_ENDPOINT` constant above with your own dev A
 Lastly, you'll need to wrap the app in a GrowthBookProvider component which will let us run A/B tests from anywhere in the app.
 
 ```html
-ReactDOM.render(
-<React.StrictMode>
-  <GrowthBookProvider growthbook="{growthbook}">
-    <App />
-  </GrowthBookProvider> </React.StrictMode
->, document.getElementById('root') );
+const root = ReactDOM.createRoot(document.getElementById('root'));
+
+root.render(
+    <React.StrictMode>
+        <GrowthBookProvider growthbook="{growthbook}">
+            <App />
+        </GrowthBookProvider>
+    </React.StrictMode>
+);
 ```
 
 ## 4. Create and use a feature
