Added enterprise settings for SSO for Google, Auth0 and Okta.

--- a/docs/docs/self-host/env.mdx
+++ b/docs/docs/self-host/env.mdx
@@ -127,7 +127,18 @@ Store uploads in a Google Cloud Storage bucket.
 
 ## Enterprise Settings
 
-Some features in self-hosted GrowthBook are only available with a commercial license key. Reach out to [sales@growthbook.io](mailto:sales@growthbook.io) to learn more.
+Some features in self-hosted GrowthBook are only available with a commercial license key. You can get a trial
+Enterprise key from your self-hosted version of GrowthBook, or reach out to [sales@growthbook.io](mailto:sales@growthbook.io) to learn more.
+
+When you have a license key, it should be set to the environment variable `LICENSE_KEY`. The key will be a long string, and should be set to the variable without any spaces or newlines.
+
+## Enterprise SSO
+
+To enable SSO on your self hosted GrowthBook instance, you will need a license key added to your environment variables, and then add
+the SSO settings for your provider. If your provider is not listed below, you can use the generic Open ID Connect below. The JSON
+object with the settings will need to be JSON encoded and then set to the environment variable `SSO_CONFIG`.
+
+### Generic Open ID Connect
 
 - **LICENSE_KEY** - Your signed license key provided by the GrowthBook team
 - **SSO_CONFIG** - A JSON-encoded string that configures SSO (using OpenID Connect). It should be an object with the following keys:
@@ -150,6 +161,92 @@ For SSO, make sure the following callback URL is whitelisted:
 - `{APP_ORIGIN}/oauth/callback`
 
 For the best SSO user experience, enable offline access and refresh tokens in your Identity Provder.
+
+:::info Note
+
+With all the SSO providers listed below, replace the all caps values with values from the provider, JSON encode the object, and set to the `SSO_CONFIG` environment variable for GrowthBook.
+
+:::
+
+### Okta
+
+```json
+{
+    "clientId": "CLIENT_ID",
+    "clientSecret": "CLIENT_SECRET",
+    "emailDomain": "EMAIL_DOMAIN",
+    "additionalScope": "offline_access",
+    "metadata": {
+        "issuer": "BASE_URL",
+        "authorization_endpoint": "BASE_URL/oauth2/v1/authorize",
+        "id_token_signing_alg_values_supported": [
+            "RS256"
+        ],
+        "jwks_uri": "BASE_URL/oauth2/v1/keys",
+        "token_endpoint": "BASE_URL/oauth2/v1/token",
+        "code_challenge_methods_supported": [
+            "S256"
+        ]
+    }
+}
+```
+
+### Google
+
+```json
+{
+    "clientId": "CLIENT_ID",
+    "clientSecret": "CLIENT_SECRET",
+    "emailDomain": "EMAIL_DOMAIN",
+    "metadata": {
+        "issuer": "https://accounts.google.com",
+        "authorization_endpoint": "https://accounts.google.com/o/oauth2/v2/auth",
+        "token_endpoint": "https://oauth2.googleapis.com/token",
+        "jwks_uri": "https://www.googleapis.com/oauth2/v3/certs",
+        "id_token_signing_alg_values_supported": [
+            "RS256"
+        ],
+        "code_challenge_methods_supported": [
+            "S256"
+        ]
+    },
+    "extraQueryParams": {
+        "access_type": "offline",
+        "prompt": "consent"
+    }
+}
+```
+
+### Auth0
+
+```json
+{
+    "clientId": "CLIENT_ID",
+    "clientSecret": "CLIENT_SECRET",
+    "emailDomain": "EMAIL_DOMAIN",
+    "additionalScope": "offline_access",
+    "metadata": {
+        "issuer": "https://TENANT.auth0.com/",
+        "authorization_endpoint": "https://TENANT.auth0.com/authorize",
+        "logout_endpoint": "https://TENANT.auth0.com/v2/logout?client_id=CLIENT_ID",
+        "id_token_signing_alg_values_supported": [
+            "HS256",
+            "RS256"
+        ],
+        "jwks_uri": "https://TENANT.auth0.com/.well-known/jwks.json",
+        "token_endpoint": "https://TENANT.auth0.com/oauth/token",
+        "code_challenge_methods_supported": [
+            "S256",
+            "plain"
+        ],
+        "audience": "AUDIENCE"
+    }
+}
+```
+
+:::note
+When setting up Auth0, please ensure that you've enabled offline access, and check the `OIDC Compliant` checkbox.
+:::
 
 ## Other Settings
 
