Added Azure AD instructions

--- a/docs/docs/self-host/env.mdx
+++ b/docs/docs/self-host/env.mdx
@@ -248,6 +248,67 @@ With all the SSO providers listed below, replace the all caps values with values
 When setting up Auth0, please ensure that you've enabled offline access, and check the `OIDC Compliant` checkbox.
 :::
 
+### Azure AD
+
+```json
+{
+  "clientId": "CLIENT_ID",
+  "clientSecret": "CLIENT_SECRET",
+  "emailDomain": "EMAIL_DOMAIN",
+  "additionalScope": "offline_access",
+  "metadata": {
+    "token_endpoint": "https://login.microsoftonline.com/TENANT_ID/oauth2/v2.0/token",
+    "jwks_uri": "https://login.microsoftonline.com/TENANT_ID/discovery/v2.0/keys",
+    "id_token_signing_alg_values_supported": ["RS256"],
+    "code_challenge_methods_supported": ["S256"],
+    "issuer": "https://login.microsoftonline.com/TENANT_ID/v2.0",
+    "authorization_endpoint": "https://login.microsoftonline.com/TENANT_ID/oauth2/v2.0/authorize",
+    "logout_endpoint": "https://login.microsoftonline.com/TENANT_ID/oauth2/v2.0/logout",
+  }
+}
+```
+
+:::note
+
+In Azure, register an Application, instead of Enterprise, as we use OpenID Connect, not SAML.
+
+:::
+
+<details>
+    <summary>See complete Azure instructions</summary>
+    <div>
+    <ol>
+    <li>
+Register an Application (we use OpenID Connect, so choose regular app, not Enterprise)
+<img src="/images/guides/SSO-Azure-1.png" />
+</li>
+
+<li>
+Enter the redirect URL as APP_HOST/oauth/callback
+<img src="/images/guides/SSO-Azure-2.png" />
+</li>
+
+<li>
+Take note of your Application Id (CLIENT_ID) and Directory Id (TENANT_ID). You will need it later
+<img src="/images/guides/SSO-Azure-3.png" />
+</li>
+<li>
+Generate a new Client Secret
+<img src="/images/guides/SSO-Azure-4.png" />
+</li>
+<li>
+Take note of the Secret Value (CLIENT_SECRET). You will need it in the next step
+</li>
+<li>
+Construct the JSON configuration for GrowthBook. Replace CLIENT_ID, CLIENT_SECRET, EMAIL_DOMAIN, and TENANT_ID, as into the JSON object above.
+</li>
+<li>
+Pass the JSON string into the environment variable SSO_CONFIG of your GrowthBook container
+</li>
+</ol>
+    </div>
+</details>
+
 ## Other Settings
 
 - **EXPERIMENT_REFRESH_FREQUENCY** - Default update schedule for experiment results. Update when stale for X hours (default `6`).
