address feedback, tags/badges

--- a/docs/docs/self-host/env.mdx
+++ b/docs/docs/self-host/env.mdx
@@ -130,20 +130,20 @@ Store uploads in a Google Cloud Storage bucket.
 Some features in self-hosted GrowthBook are only available with a commercial license key. You can get a trial
 Enterprise key from your self-hosted version of GrowthBook, or reach out to [sales@growthbook.io](mailto:sales@growthbook.io) to learn more.
 
-### License Keys
+## License Keys
 
 If you have a license key, you can activate it in GrowthBook two different ways:
 
 1. Navigate to **Settings** > **General** and look for the License section of the page. There you can input or edit your license key string. (Recommended)
 2. Alternately, set the environment variable `LICENSE_KEY` to your license key string. If using Docker, go to _docker-compose.yml_ and add the variable to the _growthbook_ > _environment_ section.
 
-### Enterprise SSO
+## Enterprise SSO
 
 To enable SSO on your self hosted GrowthBook instance, you will need an active license key (see above section), and then you may add
 the SSO settings for your provider. If your provider is not listed below, you can use the generic Open ID Connect below. The JSON
 object with the settings will need to be JSON encoded and then set to the environment variable `SSO_CONFIG`.
 
-#### Generic Open ID Connect
+### Generic Open ID Connect
 
 - **LICENSE_KEY** - Your signed license key provided by the GrowthBook team
 - **SSO_CONFIG** - A JSON-encoded string that configures SSO (using OpenID Connect). It should be an object with the following keys:
@@ -173,7 +173,7 @@ With all the SSO providers listed below, replace the all caps values with values
 
 :::
 
-#### Okta
+### Okta
 
 ```json
 {
@@ -196,7 +196,7 @@ With all the SSO providers listed below, replace the all caps values with values
 }
 ```
 
-#### Google
+### Google
 
 ```json
 {
@@ -222,7 +222,7 @@ With all the SSO providers listed below, replace the all caps values with values
 }
 ```
 
-#### Auth0
+### Auth0
 
 ```json
 {
@@ -253,7 +253,7 @@ With all the SSO providers listed below, replace the all caps values with values
 When setting up Auth0, please ensure that you've enabled offline access, and check the `OIDC Compliant` checkbox.
 :::
 
-#### Azure AD
+### Azure AD
 
 ```json
 {
