Addressing Jeremy's feedback, cleaning up the docs, adding frontend and backend support for STORE_SEGMENTS_IN_MONGO env variable, while also creating new method useConfigFileForSegments().

--- a/docs/docs/self-host/config.mdx
+++ b/docs/docs/self-host/config.mdx
@@ -68,11 +68,9 @@ segments:
   visitors:
     name: Visitors in the US
     datasource: warehouse
-    owner: Sample User
     sql: |-
-      SELECT userid as user_id, timestamp as date, country
-      FROM pages
-      WHERE country='US'
+      SELECT userid as user_id, timestamp as date
+      FROM users
     userIdType: user_id
 ```
 
