Addresses feedback - adds where statement back to example SQL and updates how we're defining STORE_SEGMENTS_IN_MONGO in secrets so it matches how we're defining that same variable on the front end.

--- a/docs/docs/self-host/config.mdx
+++ b/docs/docs/self-host/config.mdx
@@ -71,6 +71,7 @@ segments:
     sql: |-
       SELECT userid as user_id, timestamp as date
       FROM users
+      WHERE country='US'
     userIdType: user_id
 ```
 
