Clean up experiments.mdx

--- a/docs/docs/app/experiments.mdx
+++ b/docs/docs/app/experiments.mdx
@@ -18,7 +18,7 @@ Before analyzing results, you need to actually run the experiment. This can be d
 
 When you go to add an experiment in GrowthBook, it will first look in your [data source](/app/datasources) for any new experiment ids and prompt you to import them. If none are found, you can enter the experiment settings yourself.
 
-## Understanding Experimental Results
+## Experiment Results Table
 
 Once imported or added, go to the Results tab to view and update the results:
 
@@ -35,11 +35,11 @@ Each row of this table is a different metric.
 **Percent Change** shows how much better/worse the variation is compared to the control. It is a probability density graph and the thicker the area, the more likely the true percent change will be there.
 As you collect more data, the tails of the graphs will shorten, indicating more certainty around the estimates.
 
-## Understanding Experimental Results (Frequentist Engine)
+## Experiment Results Table (Frequentist Engine)
 
-You can also choose to analyze results using a simple Frequentist engine that conducts simple t-tests for differences in means and displays the commensurate p-values and confidence intervals. You can switch to the frequentist engine under **General -> Settings -> Experiment Settings -> Statistics Engine**.
+You can also choose to analyze results using a Frequentist engine that conducts simple t-tests for differences in means and displays the commensurate p-values and confidence intervals. You can switch to the frequentist engine under **General -> Settings -> Experiment Settings -> Statistics Engine**.
 
-![Results Table](/images/engine-setting.png)
+![Frequentist Setting](/images/engine-setting.png)
 
 If you select the "Frequentist" engine, when you navigate to the results tab to view and update the results, you will see the following results table:
 
