--- a/docs/docs/app/experiments.mdx
+++ b/docs/docs/app/experiments.mdx
@@ -72,7 +72,7 @@ A "Chance of Being Worse" less than 65% is green and of no concern. Between 65% 
 
 ![Guardrails](/images/guardrails.png)
 
-If you select the frequentist metric, we instead use yellow to represent a metric moving in the wrong direction at all (regardless of statistical significance), red to represent a metric moving in the wrong direction with a two-sided t-test p-value below 0.05, and green to represent a metric moving in the right direction with a p-value below 0.05. Otherwise the cell is unshaded if the metric is moving in the right direction but not statistically significant at the 0.05 level.
+If you select the frequentist engine, we instead use yellow to represent a metric moving in the wrong direction at all (regardless of statistical significance), red to represent a metric moving in the wrong direction with a two-sided t-test p-value below 0.05, and green to represent a metric moving in the right direction with a p-value below 0.05. Otherwise the cell is unshaded if the metric is moving in the right direction but not statistically significant at the 0.05 level.
 
 ## Dimensions
 
