--- a/docs/docs/lib/react.mdx
+++ b/docs/docs/lib/react.mdx
@@ -11,6 +11,8 @@ import ExternalLink from '@site/src/components/ExternalLink'
 
 This is a thin wrapper on top of the [Javascript Library](/lib/js), so you might want to view those docs first to familiarize yourself with the basic classes and methods.
 
+This SDK supports both ReactJS and ReactNative environments.
+
 ## Installation
 
 ```
@@ -32,35 +34,29 @@ import { useEffect } from "react";
 import { GrowthBook, GrowthBookProvider } from "@growthbook/growthbook-react";
 
 // Create a GrowthBook instance
-const growthbook = new GrowthBook({
-  // enableDevMode: true allows you to use the Chrome DevTools Extension to test/debug.
+const gb = new GrowthBook({
+  apiHost: "https://cdn.growthbook.io",
+  clientKey: "sdk-abc123",
+  // Enable easier debugging of feature flags during development
   enableDevMode: true,
-  // Callback when a user is put into an A/B experiment
-  trackingCallback: (experiment, result) => {
-    console.log("Experiment Viewed", {
-      experimentId: experiment.key,
-      variationId: result.variationId,
-    });
-  },
 });
 
 export default function App() {
   useEffect(() => {
-    // Load feature definitions from GrowthBook API
-    fetch("https://cdn.growthbook.io/api/features/MY_API_KEY")
-      .then((res) => res.json())
-      .then((json) => growthbook.setFeatures(json.features))
-      .catch((e) => console.error("Failed to fetch features", e));
-
-    // Set user attributes for targeting (from cookie, auth system, etc.)
-    growthbook.setAttributes({
-      id: "123",
-      company: "acme",
-    });
+    // Load features from the GrowthBook API
+    gb.loadFeatures()
   }, []);
 
+  useEffect(() => {
+    // Set user attributes for targeting (from cookie, auth system, etc.)
+    gb.setAttributes({
+      id: user.id,
+      company: user.company,
+    });
+  }, [user])
+
   return (
-    <GrowthBookProvider growthbook={growthbook}>
+    <GrowthBookProvider growthbook={gb}>
       <OtherComponent />
     </GrowthBookProvider>
   );
@@ -81,7 +77,7 @@ export default function OtherComponent() {
   const newLogin = useFeature("new-login-form").on;
 
   // Multivariate or string/JSON values with a fallback
-  const buttonColor = useFeature("login-button-color").value || "blue";
+  const buttonColor = useFeature("login-button-color").value ?? "blue";
 
   if (newLogin) {
     return <NewLogin color={buttonColor} />;
@@ -133,21 +129,47 @@ import { useGrowthBook } from "@growthbook/growthbook-react";
 
 export default function OtherComponent() {
   // Identical to: const feature = useFeature("my-feature")
-  const growthbook = useGrowthBook();
-  const feature = growthbook.feature("my-feature");
+  const gb = useGrowthBook();
+  const feature = gb.evalFeature("my-feature");
 }
 ```
 
-## The GrowthBook Context
+## Loading Features
 
-The `GrowthBook` constructor takes a number of optional settings.
+In order for the GrowthBook SDK to work, it needs to have feature definitions from the GrowthBook API. There are 2 ways to get this data into the SDK.
 
-### Features
+### Built-in Fetching and Caching
 
-If you already have features loaded as a JSON object, you can pass them into the constructor with the `features` field:
+If you pass an `apiHost` and `clientKey` into the GrowthBook constructor, it will handle the network requests, caching, retry logic, etc. for you automatically. If your feature payload is encrypted, you can also pass in a `decryptionKey`.
 
 ```ts
-new GrowthBook({
+const gb = new GrowthBook({
+  apiHost: "https://cdn.growthbook.io",
+  clientKey: "sdk-abc123",
+  decryptionKey: "key_abc123" // Only if you have feature encryption turned on
+});
+
+// Wait for features to be downloaded
+await gb.loadFeatures({
+  // When features change, update the GrowthBook instance automatically
+  // Default: `false`
+  autoRefresh: true,
+  // If the network request takes longer than this (in milliseconds), continue
+  // Default: `0` (no timeout)
+  timeout: 2000
+});
+```
+
+Until features are loaded, all features will evaluate to `null`. If you're ok with a potential flicker in your application (features going from `null` to their real value), you can call `loadFeatures` without awaiting the result.
+
+If you want to refresh the features at any time (e.g. when a navigation event occurs), you can call `gb.refreshFeatures()`.
+
+### Custom Integration
+
+If you prefer to handle the network and caching logic yourself, you can instead pass in a features JSON object directly. For example, you might store features in Postgres and send it down to your front-end as part of your app's initial bootstrap API call.
+
+```ts
+const gb = new GrowthBook({
   features: {
     "feature-1": {...},
     "feature-2": {...},
@@ -156,11 +178,13 @@ new GrowthBook({
 })
 ```
 
-If you need to load feature definitions from a remote source like an API or database, you can update the context at any time with `setFeatures()` (seen above in the Quick Start). **Note** - if you try to use a feature before it is loaded, it will always evaluate to `null`.
+Note that you don't have to call `gb.loadFeatures()`. There's nothing to load - everything required is already passed in.
 
-If you use the GrowthBook App to manage your features, you don't need to build this JSON file yourself - it will auto-generate one for you and make it available via an API endpoint.
+You can update features at any time by calling `gb.setFeatures()` with a new JSON object.
 
-If you prefer to build this file by hand or you want to know how it works under the hood, check out the detailed [Feature Definitions](/lib/js#feature-definitions) section in the Javascript SDK docs.
+## The GrowthBook Instance
+
+The `GrowthBook` constructor takes a number of optional settings.
 
 ### Attributes
 
@@ -228,50 +252,60 @@ You can enable Dev Mode by passing `enableDevMode: true` when you create a new G
 Enabling Dev Mode allows you to test and debug with GrowthBook's Chrome DevTools Extension.
 
 ```js
-const growthbook = new GrowthBook({
+const gb = new GrowthBook({
   // Set enableDevMode to true to use the Chrome DevTools Extension to aid testing/debugging.
   enableDevMode: true,
 });
 ```
 
-## Hiding Features from Users
+## Server Side Rendering (SSR)
 
-If you fetch the list of features from a client-side app, any of your users could inspect the network request and see which features and experiments you are running. In most cases, this is not a big deal, but if you did want to prevent that, you have two options:
+This SDK fully supports server side rendering. The below example is using Next.js, but other frameworks should be similar.
 
-1. Evaluate feature flags using a server-side SDK and only pass the result to the browser
-2. Enable encryption for your SDK Endpoint
+First, create a helper function to generate GrowthBook SSR props from an incoming request
 
-If you enable encryption for an SDK Endpoint, instead of returning features as human-readable JSON, we will return it as an encrypted string that must be decrypted before being passed into the SDK.
+```js
+// util/gb-server.js
+import { getGrowthBookSSRData } from "@growthbook/growthbook-react";
 
-With encryption enabled, the response from the SDK Endpoint will be in the format:
-
-```json
-  {
-    "status": 200,
-    "encryptedFeatures": "abcdef123456GHIJKL0987654321..."
-  }
-```
-
-The GrowthBook class has a `setEncryptedFeatures` helper method. You will need to pass in your encryption key, which you can find on the **Features -> Environments** page in GrowthBook.
-
-```ts
-function MyApp() {
-  useEffect(() => {
-    // Load features from the encrypted SDK Endpoint and decrypt them
-    fetch("https://cdn.growthbook.io/api/features/<your api key>")
-      .then((res) => res.json())
-      .then((json) => growthbook.setEncryptedFeatures(json.encryptedFeatures, "MY_ENCRYPTION_KEY"))
-      .catch((e) => console.log("Failed to set GrowthBook feature definitions", e));
-  }, []);
-  // ...
+export async function generateGrowthBookSSRProps(context) {
+  return getGrowthBookSSRData({
+	  apiHost: process.env.NEXT_PUBLIC_GROWTHBOOK_API_HOST,
+	  clientKey: process.env.NEXT_PUBLIC_GROWTHBOOK_CLIENT_KEY,
+    attributes: {
+      // TODO: get more targeting attributes from request context
+      id: context.req.cookies.DEVICE_ID
+    }
+  })
 }
 ```
 
-**Note**: This method is not completely private. Users could find your encryption key if they inspect your minified javascript files.
+Then, on a server rendered page, call this helper and pass it into the `useGrowthBookSSR` hook:
 
-### React Native
+```jsx
+// pages/server.jsx
+import MyComponent from "../components/MyComponent";
+import { generateGrowthBookSSRProps } from "../util/gb-server";
+import { useGrowthBookSSR } from "@growthbook/growthbook-react";
 
-If you're using React Native, you may need to polyfill the `window.crypto.subtle` API and the `TextEncoder/TextDecoder` classes.
+export async function getServerSideProps(context) {
+  const gbData = await generateGrowthBookSSRProps(context);
+  return {
+    props: {
+      gbData,
+    },
+  };
+}
+
+export default function ServerPage({ gbData }) {
+  // This is required once at the top of the SSR page
+  useGrowthBookSSR(gbData);
+
+  return <MyComponent />;
+}
+```
+
+In the rest of your app, just use the same hooks and components as client-side rendering (`useFeature`, `<IfFeatureEnabled>`, etc.)
 
 ## Inline Experiments
 
